fixed IE 7 issue where buttons next to each other overlapped
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14165 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/WebButton.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/WebButton.css
@@ -8,9 +8,8 @@ button.webButton
   display: inline-block;
   vertical-align: middle;
   padding: 0px 3px !important;
-  margin: 1px 0px !important;
+  margin: 1px 2px !important;
   outline: none;
-  left: -1px;
 }
 
 button.webButton::-moz-focus-inner 
